--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DSN=postgres://user:pass@localhost:5432/db
+DSN=postgres://user:postgres123@localhost:5432/finance_db?sslmode=disable
 SERVICE_NAME=finance-system
 APP_VERSION=v1
 LOG_LEVEL=debug
-HTTP_PORT=8080
+HTTP_PORT=8181
